# metaclonotypist

./: LICENSE  README.md  pyproject.toml  setup.py
examples/: run_cli_example.sh
examples/data/: hladata.csv  tcrdata.csv
metaclonotypist/: __init__.py  main.py  version.py
